# mystery-box

./: .gitignore  Readme.md  context.json  flags.json  props.json
.github/workflows/: deploy.yml
contract/: .gitignore  Cargo.toml  Readme.md  build.sh  deploy.sh
contract/src/: boxes.rs  callbacks.rs  contract.rs  enumeraion.rs  enumeration.rs  internal.rs  json.rs  lib.rs  mystery_box.rs  pools.rs  reward_pool.rs  reward_pools.rs  test_utils.rs  tests.rs  types.rs  utils.rs
contract/src/contract/: callbacks.rs  enumeration.rs  enums.rs  internal.rs  json.rs  json_types.rs  pools.rs  quest.rs  quest_contract_methods.rs  questbox.rs  trusted_contracts.rs  types.rs
contract/src/contract/json_types/: json_box.rs  json_nft_message.rs  json_pagination.rs  json_quest.rs  json_reward.rs
contract/src/contract/quest/: test_utils.rs  tests.rs
contract/src/contract/types/: quest_data.rs  questbox_data.rs
contract/src/tests/: integration_tests.rs
contract/src/tests/integration_tests/: mint_many_test.rs  mod.rs  near_reward_integration_test.rs  nft_reward_integration_test.rs  utils.rs
contract/src/tests/integration_tests/wasms/: mystery_box.wasm  non_fungible_token.wasm
contract/src/tests/wasms/: mystery_box.wasm
management_contract/: Cargo.toml  build.sh
management_contract/src/: lib.rs
widget/: Readme.md  dev.sh  package.json  replacements.dev.json  replacements.mainnet.json  replacements.testnet.json
widget/src/: MysteryBox.Manage.jsx  MysteryBox.jsx  MysteryBox.metadata.json
widget/src/MysteryBox.Components/: Claiming.jsx  Registration.jsx
widget/src/MysteryBox.Manage/Components/: HomeButton.jsx  MenuButton.jsx  MenuHeader.jsx  NearPool.jsx  PrimaryLinkButton.jsx  PrimaryText.jsx  RarityButton.jsx  Socials.jsx
widget/src/MysteryBox.Manage/Screens/: AddNearReward.jsx  AddNftReward.jsx  DeployContract.jsx  Home.jsx  ListRewards.jsx  ListUserBoxes.jsx  MintBox.jsx
widget/src/MysteryBox.Messages/: AuthenticationRequired.jsx  ContestWasNotSetUp.jsx  InvalidContract.jsx  RegistrationClosed.jsx  VerificationRequired.jsx
widget/src/MysteryBox/Screens/: AuthenticationRequired.jsx  Claim.jsx  ClaimAnimation.jsx  InvalidContract.jsx  NoBoxesFound.jsx  VerificationRequired.jsx
widget/src/Templates/: Layout.jsx  Notification.jsx
widget/src/Utils/: Logger.jsx
