[package]
edition = "2021"
name = "mystery_box"
version = "0.4.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0"

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
parity-secp256k1 = {git = 'https://github.com/paritytech/rust-secp256k1.git'}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "z"
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[dev-dependencies]
anyhow = "1.0.86"
near-workspaces = "0.11.0"
tokio = { version = "1.12.0", features = ["full"] }
