[package]
edition = "2021"
name = "mystery_box_management_contract"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.5.0"
near-sdk = "5.1.0"

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
parity-secp256k1 = {git = 'https://github.com/paritytech/rust-secp256k1.git'}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "z"
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
